@@ -1,0 +1,8 @@
+#ifndef UINT32_H
+#define UINT32_H
+
+#include <stdint.h>
+
+typedef uint32_t uint32;
+
+#endif
